# ct_toolchain

./: README.md
drawio_acts/: Makefile  pyproject.toml
drawio_acts/src/xml_to_acts/: acts.py  cli.py  drawio.py  node.py
drawio_acts/tests/: conftest.py  test_xml.py
drawio_acts/tests/expected/: MachineVisionSystem.txt
drawio_acts/tests/xml/: MachineVisionSystem.xml  MachineVisionSystem_compressed.xml
tools/ACTS3.2/: ReleaseNotesR3.2.txt
